@@ -98,6 +98,7 @@ sa.chNone=None
 sa.chHorz=Horizontal
 sa.chVert=Vertical
 sa.chCross=Cross
+sa.csShortLine=Short Line
 
 # Configure literals
 conf.title=Session Configuration
